import authentication feature components in authentication page

--- a/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
@@ -1,1 +1,7 @@
-<p>authentication-page works!</p>
+<lib-login></lib-login>
+<lib-sign-up></lib-sign-up>
+<lib-add-email></lib-add-email>
+<lib-add-phone-number></lib-add-phone-number>
+<lib-edit-phone-number></lib-edit-phone-number>
+<lib-edit-email></lib-edit-email>
+<lib-one-time-password></lib-one-time-password>
