--- a/apps/task-management-system/task-tree/main/src/app/app.component.html
+++ b/apps/task-management-system/task-tree/main/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-nx-welcome></app-nx-welcome> <router-outlet></router-outlet>
+<lib-authentication></lib-authentication>
+    
+<router-outlet></router-outlet>
