--- a/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
@@ -1,7 +1,9 @@
-<lib-login></lib-login>
-<lib-sign-up></lib-sign-up>
-<lib-add-email></lib-add-email>
-<lib-add-phone-number></lib-add-phone-number>
-<lib-edit-phone-number></lib-edit-phone-number>
-<lib-edit-email></lib-edit-email>
-<lib-one-time-password></lib-one-time-password>
+<div [ngSwitch]="currentView">
+  <lib-login *ngSwitchCase="'login'"></lib-login>
+  <lib-sign-up *ngSwitchCase="'sign-up'"></lib-sign-up>
+  <lib-add-email *ngSwitchCase="'add-email'"></lib-add-email>
+  <lib-add-phone-number *ngSwitchCase="'add-phone-number'"></lib-add-phone-number>
+  <lib-edit-phone-number *ngSwitchCase="'edit-phone-number'"></lib-edit-phone-number>
+  <lib-edit-email *ngSwitchCase="'edit-email'"></lib-edit-email>
+  <lib-one-time-password *ngSwitchCase="'one-time-password'"></lib-one-time-password>
+</div>
