--- a/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
@@ -1,9 +1,32 @@
-<div [ngSwitch]="currentView">
-  <lib-login *ngSwitchCase="'login'"></lib-login>
-  <lib-sign-up *ngSwitchCase="'sign-up'"></lib-sign-up>
-  <lib-add-email *ngSwitchCase="'add-email'"></lib-add-email>
-  <lib-add-phone-number *ngSwitchCase="'add-phone-number'"></lib-add-phone-number>
-  <lib-edit-phone-number *ngSwitchCase="'edit-phone-number'"></lib-edit-phone-number>
-  <lib-edit-email *ngSwitchCase="'edit-email'"></lib-edit-email>
-  <lib-one-time-password *ngSwitchCase="'one-time-password'"></lib-one-time-password>
+<div class="container">
+  <div class="content" [ngSwitch]="currentView">
+    <lib-add-email
+      *ngSwitchCase="'add-email'"
+      (navigate)="onScreenChange($event)"
+    ></lib-add-email>
+    <lib-add-phone-number
+      *ngSwitchCase="'add-phone-number'"
+      (navigate)="onScreenChange($event)"
+    ></lib-add-phone-number>
+    <lib-edit-email
+      *ngSwitchCase="'edit-email'"
+      (navigate)="onScreenChange($event)"
+    ></lib-edit-email>
+    <lib-edit-phone-number
+      *ngSwitchCase="'edit-phone-number'"
+      (navigate)="onScreenChange($event)"
+    ></lib-edit-phone-number>
+    <lib-login
+      *ngSwitchCase="'login'"
+      (navigate)="onScreenChange($event)"
+    ></lib-login>
+    <lib-one-time-password
+      *ngSwitchCase="'one-time-password'"
+      (navigate)="onScreenChange($event)"
+    ></lib-one-time-password>
+    <lib-sign-up
+      *ngSwitchCase="'sign-up'"
+      (navigate)="onScreenChange($event)"
+    ></lib-sign-up>
+  </div>
 </div>
