update sign up to login flow

--- a/libs/task-management-system/task-tree/ui/src/lib/features/sign-up/sign-up.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/features/sign-up/sign-up.component.html
@@ -99,7 +99,7 @@
   </form>
   <div class="p-field">
     <span class="text-center">
-      <a class="text-center" (click)="changeView()" class="sign-up-form__link">
+      <a (click)="changeView()" class="sign-up-form__link">
         Login</a
       ></span
     >
