update text in sign up

--- a/libs/task-management-system/task-tree/ui/src/lib/features/sign-up/sign-up.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/features/sign-up/sign-up.component.html
@@ -99,9 +99,8 @@
   </form>
   <div class="p-field">
     <span class="text-center">
-      <a (click)="changeView()" class="sign-up-form__link">
-        Login</a
-      ></span
+      Already have an account
+      <a (click)="changeView()" class="sign-up-form__link"> Login</a></span
     >
   </div>
 </p-card>
