--- a/libs/task-management-system/task-tree/ui/src/lib/features/sign-up/sign-up.component.scss
+++ b/libs/task-management-system/task-tree/ui/src/lib/features/sign-up/sign-up.component.scss
@@ -8,7 +8,7 @@
 
 .sign-up-form {
   width: 100%;
-  &__input{
+  &__input {
     margin-top: 0.5em;
     margin-bottom: 0.75em;
   }
@@ -22,11 +22,11 @@
   color: red;
   font-size: 0.8em;
   margin-bottom: 0.75em;
-
 }
 
-.sign-up-form__link{
-  color:cornflowerblue
+.sign-up-form__link {
+  margin-left: 5px;
+  color: cornflowerblue;
 }
 
 .text-center {
@@ -34,5 +34,5 @@
   justify-content: center;
   align-items: center;
   height: 100%;
-  padding: 0.5em
+  padding: 0.5em;
 }
