update sign up functionality

--- a/libs/task-management-system/task-tree/ui/src/lib/features/sign-up/sign-up.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/features/sign-up/sign-up.component.html
@@ -100,7 +100,7 @@
   <div class="p-field">
     <span class="text-center">
       Already have an account
-      <a (click)="changeView()" class="sign-up-form__link"> Login</a></span
+      <a (click)="navigateToLogin()" class="sign-up-form__link"> Login</a></span
     >
   </div>
 </p-card>
