forgot password flow

--- a/libs/task-management-system/task-tree/ui/src/lib/features/forgot-password/forgot-password.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/features/forgot-password/forgot-password.component.html
@@ -1,1 +1,45 @@
-<p>forgot-password works!</p>
+<p-card styleClass="ui-card-shadow">
+  <ng-template pTemplate="header">
+    <div class="text-center">
+      <h2>Forgot Password</h2>
+    </div>
+  </ng-template>
+  <form [formGroup]="forgotPasswordForm" (ngSubmit)="onSubmit()">
+    <div class="forgot-password__field">
+      <label class="forgot-password__label" for="email">Email</label>
+      <input
+        id="email"
+        type="email"
+        pInputText
+        formControlName="email"
+        class="forgot-password__input"
+      />
+    </div>
+    <div
+      *ngIf="
+        forgotPasswordForm.get('email')?.invalid &&
+        forgotPasswordForm.get('email')?.touched
+      "
+      class="forgot-password__error"
+    >
+      Valid email is required.
+    </div>
+    <div class="forgot-password__field">
+      <button
+        pButton
+        type="submit"
+        [label]="'Submit'"
+        [disabled]="forgotPasswordForm.invalid"
+        class="forgot-password__button"
+      ></button>
+    </div>
+  </form>
+  <div class="forgot-password__field">
+    <span
+      >Remembered your password?
+      <a (click)="navigateToLogin()" class="forgot-password__link"
+        >Login</a
+      ></span
+    >
+  </div>
+</p-card>
