one time password component changes

--- a/libs/task-management-system/task-tree/ui/src/lib/features/one-time-password/one-time-password.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/features/one-time-password/one-time-password.component.html
@@ -1,2 +1,35 @@
-<p>one-time-password works!</p>
-<button (click)="changeView()"> otp => verified</button>
+<div class="p-card ui-card-shadow flex justify-content-center">
+    <div class="flex flex-column align-items-center">
+      <div class="font-bold text-xl mb-2">Authenticate Your Account</div>
+      <p class="text-color-secondary block mb-5">
+        Please enter the code sent to your phone.
+      </p>
+  
+      <p-inputOtp [(ngModel)]="value" [length]="4" styleClass="custom-otp-inputs">
+        <ng-template pTemplate="input" let-token let-events="events" let-index="index">
+          <input
+            pInputText
+            type="text"
+            [maxLength]="1"
+            (input)="events.input($event)"
+            (keydown)="events.keydown($event)"
+            [attr.value]="token"
+            class="custom-otp-input"
+          />
+          <div *ngIf="index === 2" class="otp-divider"></div>
+        </ng-template>
+      </p-inputOtp>
+  
+      <div class="p-field flex text-center justify-content-between mt-5 align-self-stretch">
+        <span class="timer">{{ minutes }}:{{ seconds | number: '2.0' }}</span>
+        <a (click)="resendCode()">Resend Code</a>
+
+      </div>
+  
+      <div class="flex justify-content-between mt-3">
+        <button type="button" pButton (click)="changeDevice()" label="Change Device"></button>
+        <button type="button" pButton (click)="submitOTP()" label="Submit Code"></button>
+      </div>
+    </div>
+  </div>
+  
