--- a/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
@@ -28,6 +28,9 @@
     ></lib-login>
     <lib-one-time-password
       *ngSwitchCase="'one-time-password'"
+      (navigate)="navigateToNextView($event)"
+      (verify)="onVerify($event)"
+      (resend)="resendCode($event)"
     ></lib-one-time-password>
     <lib-sign-up
       *ngSwitchCase="'sign-up'"
