--- a/libs/task-management-system/task-tree/ui/src/lib/features/add-email/add-email.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/features/add-email/add-email.component.html
@@ -1,2 +1,51 @@
-<p>add-email works!</p>
-<button (click)="changeView()">add email</button>
+<p-card styleClass="ui-card-shadow">
+    <ng-template pTemplate="header">
+        <div class="text-center">
+            <h2>Add Email Address</h2>
+        </div>
+    </ng-template>
+    <form [formGroup]="emailForm" (ngSubmit)="saveEmailAddress()">
+        <div class="add-email__field">
+            <label class="add-email__label" for="email">Email Address</label>
+            <input
+                id="email"
+                type="email"
+                pInputText
+                formControlName="emailAddress"
+                class="add-email__input"
+                aria-describedby="emailHelp"
+            />
+            <div
+                id="emailHelp"
+                class="add-email__error"
+                *ngIf="email?.invalid && email?.touched"
+            >
+                <div *ngIf="email?.errors?.['required']">Email address is required.</div>
+                <div *ngIf="email?.errors?.['email']">
+                    Please enter a valid email address.
+                </div>
+            </div>
+        </div>
+
+        <div class="add-email__buttons">
+            <button
+                pButton
+                type="submit"
+                label="Save"
+                [disabled]="emailForm.invalid"
+                class="add-email__button"
+            ></button>
+            <button
+                pButton
+                type="button"
+                label="Cancel"
+                (click)="cancelAddEmail()"
+                class="add-email__button"
+            ></button>
+        </div>
+
+        <div *ngIf="successMessage" class="add-email__success">
+            {{ successMessage }}
+        </div>
+    </form>
+</p-card>
