select device flow

--- a/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
@@ -10,6 +10,10 @@
       (navigate)="navigateToNextView($event)"
       (back)="backToPreviousView($event)"
     ></lib-add-phone-number>
+    <lib-select-device *ngSwitchCase="'select-device'"
+    (navigate)="navigateToNextView($event)"
+    (back)="onSetupLater($event)"
+    ></lib-select-device>
     <lib-edit-email
       *ngSwitchCase="'edit-email'"
       (back)="backToPreviousView($event)"
