add verification component to authentication page

--- a/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
@@ -45,5 +45,8 @@
       (navigate)="navigateToNextView($event)"
       (verify)="onVerify($event)"
     ></lib-sign-up>
+    <lib-verification-completed
+    *ngSwitchCase="'verification-completed'"
+    ></lib-verification-completed>
   </div>
 </div>
