--- a/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
+++ b/libs/task-management-system/task-tree/ui/src/lib/pages/authentication-page/authentication-page.component.html
@@ -27,6 +27,7 @@
     <lib-forgot-password 
     *ngSwitchCase="'forgot-password'"
     (back)="backToPreviousView($event)"
+    (verify)="onVerify($event)"
     ></lib-forgot-password>
     <lib-login
       *ngSwitchCase="'login'"
